--- a/parse_ticks.ipynb
+++ b/parse_ticks.ipynb
@@ -18,8 +18,7 @@
     "# TODOS:\n",
     "# put these todos in a more central place\n",
     "# probably a good idea to sort the todos based on priority for MVP\n",
-    "# - normalize rating codes\n",
-    "# - get y axis labels with grades\n",
+    "# - improve letter grade normalized rating codes\n",
     "# - ability to upload excel file for private ticks\n",
     "# - constraints for generating graph\n",
     "# - caching tick files for multiple runs and graph generations\n",
@@ -619,7 +618,6 @@
     "area = (df['Pitches'].apply(math.sqrt)/math.pi * 1.772453850905516 * 15)  #TODO: come up with better area formula for multipitch\n",
     "area = (df['Pitches'].apply(lambda x : math.pow(x, 0.9)) * 15) \n",
     "plt.scatter(x, y, c=c, s=area, alpha=0.5) \n",
-    "# plt.yticks(numpy.arange(1000, 6000, step=1000), ['5.4', '5.6', '5.8', '5.10', '5.11'])  # Set text labels.\n",
     "\n",
     "\n",
     "def generate_yticks(ylim_min, ylim_max):\n",
